Bug fix in header
Adjust position to prevent covering main content

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -48,7 +48,10 @@ header, footer {
 }
 
 header {
-    position: fixed;
+    position: static;
+    margin: 0 2%;
+    display: flex;
+
 }
 
 footer {
